; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_ioc.c_bfa_phy_notify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_ioc.c_bfa_phy_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_phy_s = type { i32, i32, i32, i32 (i32, i32)* }

@BFA_STATUS_IOC_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @bfa_phy_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_phy_notify(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfa_phy_s*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.bfa_phy_s*
  store %struct.bfa_phy_s* %7, %struct.bfa_phy_s** %5, align 8
  %8 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @bfa_trc(%struct.bfa_phy_s* %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  switch i32 %11, label %34 [
    i32 129, label %12
    i32 128, label %12
  ]

12:                                               ; preds = %2, %2
  %13 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %14 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %33

17:                                               ; preds = %12
  %18 = load i32, i32* @BFA_STATUS_IOC_FAILURE, align 4
  %19 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %20 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %22 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %21, i32 0, i32 3
  %23 = load i32 (i32, i32)*, i32 (i32, i32)** %22, align 8
  %24 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %25 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %28 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 %23(i32 %26, i32 %29)
  %31 = load %struct.bfa_phy_s*, %struct.bfa_phy_s** %5, align 8
  %32 = getelementptr inbounds %struct.bfa_phy_s, %struct.bfa_phy_s* %31, i32 0, i32 0
  store i32 0, i32* %32, align 8
  br label %33

33:                                               ; preds = %17, %12
  br label %35

34:                                               ; preds = %2
  br label %35

35:                                               ; preds = %34, %33
  ret void
}

declare dso_local i32 @bfa_trc(%struct.bfa_phy_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
